# PrincipiaMetaphysica

./: .gitattributes  .gitignore  .zenodo.json  12.7 Final Changes.txt  26 to 14D.txt  26D_TO_14D_UPDATES.md  ACADEMIC_FORMULA_RENDERING.md  ACKNOWLEDGMENTS_ADDED.md  AGENT10_FINAL_INTEGRATION_REPORT.md  AGENT1_ABSTRACT_INTRO_UPDATE.md  AGENT2_COMPLETE.txt  AGENT2_FOUNDATIONS_REPORT.md  AGENT2_THEORY_SECTIONS_UPDATE.md  AGENT3_FOUNDATIONS_UPDATE.md  AGENT4_BEGINNERS_GUIDE_UPDATE.md  AGENT5_CMB_BUBBLES_REWRITE.md  AGENT5_FINAL_VERIFICATION_REPORT.md  AGENT5_FIXES_REQUIRED.md  AGENT5_SUMMARY.txt  AGENT5_VALIDATION_CHECKLIST.md  AGENT5_VALIDATION_REPORT.md  AGENT6_REFERENCES_UPDATE.md  AGENT7_PHILOSOPHICAL_UPDATE.md  AGENT8_COMPUTATIONAL_UPDATE.md  AGENT8_QUICK_REFERENCE.md  AGENT8_SUMMARY.md  AGENT9_VISUALIZATIONS_CREATED.md  AGENT_3_SUMMARY.md  AGENT_C_README.md  AGENT_C_REPORT.md  AGENT_C_SUMMARY.md  AGENT_D_FIX_REPORT.md  AGENT_E_REPORT.md  AGENT_F_COMPLETION_REPORT.md  AGENT_F_SUMMARY.md  AI_REFERENCES_REMOVAL_SUMMARY.md  APPENDICES_SUMMARY.md  APPENDIX_FIXES_README.md  APPENDIX_RENDERING_POLISH.md  ARCHITECTURE.md  (+899 more)
.claude/: settings.local.json
AUTO_GENERATED/: README.md  theory_output.json
AutoGenerated/: 27D_terminology_audit_v24.json  CERTIFICATES_v16_2_FINAL.json  CERTIFICATE_FIX_TODO.md  FORMULAS.md  GATES_72.json  GATES_72_CERTIFICATES.json  GATES_72_v16_2.json  GATES_CERTIFICATES.json  QUICK_START_SIMULATION_INDEX.md  THEORY_OUTPUT_VALIDATION_REPORT.md  adversarial_report.json  adversarial_report_v24.json  arithma_trees.json  assertion_verdicts.json  audit_report_20260125_084415.json  audit_report_20260125_174144.json  beginner-guide.json  compression_report.json  compression_report_v24.json  dependency_chains.json  eml_cross_check.json  eml_crosscheck.json  eml_dependency_chains.json  eml_trees.json  eml_trees_v25.json  falsification_report.json  formal_proof_indices.json  formal_proof_manifest.json  formula_renders.json  formula_section_audit.json  formula_simulation_mapping.csv  formulas.json  foundations.json  gemini_final_verdict_review.json  gemini_peer_review.json  gemini_peer_review_results.json  gemini_post_simulation_review.json  ghost_literal_report.json  gnostic_constants.json  hubble_s8_debate_report.md  (+32 more)
PROOFS/: Holonomy_Phase_Strain_v16_2.md  Hopf_Fibration_Residue_v16_2.md  Mirror_Brane_Metric_Derivation_v16_2.md  PROOF_MANIFEST_v16_2.md
Pages/: appendices.html  beginners-guide.html  certificates.html  consciousness-speculative.html  falsification.html  faq.html  formulas.html  foundations.html  geometric-framework.html  mismatches.html  paper.html  parameters.html  philosophical-implications.html  references.html  sections.html  simulations-index.json  simulations.html  theory-diagrams.html  visualization-index.html
Principia_Metaphysica-Demon_Lock/: CITATION.cff  LICENSE  Launch.bat  MANIFEST.json  PEER_REVIEW_DEFENSE.md  README.md  VERIFICATION_MANIFEST.txt  config.py  index.html  run_all_simulations.py  verify_package.py
Principia_Metaphysica-Demon_Lock_FULL/: .gitignore  .zenodo.json  ARCHITECTURE.md  CITATION.cff  FORMULAS.md  Launch.bat  MANIFEST.in  MANIFEST.json  PAPER_POLISH_PLAN_v19.md  PEER_REVIEW_DEFENSE.md  PRECISION.md  README.md  VERIFICATION_MANIFEST.txt  config.py  index.html  run_all_simulations.py  serve.py
Principia_Metaphysica_v16_2_20251230/: IMPLEMENTATION_PLAN_v16_2.md  MANIFEST.json  config.py
(+4237 files in other folders)
